changed the image source

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <table>
         <tr>
             <td>
-                <img src="image/WhatsApp Image 2023-01-04 at 7.03.55 PM-modified.png" alt="logo"
+                <img src="WhatsApp Image 2023-01-04 at 7.03.55 PM-modified.png" alt="logo"
                 width="200"
                 height="200">
             </td>
